Update Rdoc & gem dependencies.

--- a/README.rdoc
+++ b/README.rdoc
@@ -15,8 +15,21 @@ That way, you can have trample log in as several different users and request dif
 Trample uses a ruby DSL for configuration.
   
   Trample.configure do
-    concurrency 5
-    iterations  10
+  concurrency 4
+  iterations  1
+  http_basic_auth_user
+  http_basic_auth_password
+  # maximum sleep between threads in seconds
+  concurrency_delay_max
+
+
+  #
+  # GETs & POSTs that follow are executed sequentially inside a thread.
+  # Results are stored in thread local storage in Thread.current[:result]
+  # Any intermediate results you want to use also need to go into thread local storage!
+  #
+  # YOU HAVE BEEN WARNED!
+  #
     login do
       post "http://yoursite.com/login" do
         {:username => User.random.username, :password => "swordfish"}
